Bug 1416391 - Fix Element.scrollIntoView in "nearest" mode to behave according to CSSOM spec. r=tnikkel a=gchang

MozReview-Commit-ID: 5xhqKQ1ZDV6